@@ -50,7 +50,8 @@ public:
     void setResampleMode(ResampleMode mode);
     ResampleMode resampleMode() const;
 
-    virtual void setInterval( Qt::Axis, const QwtInterval & );
+    void setInterval( Qt::Axis, const QwtInterval & );
+    QwtInterval interval( Qt::Axis axis) const;
 
     void setValueMatrix( const QVector<double> &values, int numColumns );
     const QVector<double> valueMatrix() const;
